Fixed search results container overflowing issue

--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@@ -540,6 +540,9 @@ button.navbar-toggle {
 #mkdocs-search-results {
 	z-index: 999999;
 	background: #ffffff;
+	max-height: 400px;
+    overflow-y: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 #mkdocs-search-results > article {
